--- a/stellar-horizon-postgres/debian/changelog
+++ b/stellar-horizon-postgres/debian/changelog
@@ -1,5 +1,5 @@
-stellar-horizon-postgres (_VERSION_-_BUILD_VERSION_) stable; urgency=medium
+stellar-core-onfo-postgres (0.1-1) stable; urgency=medium
 
   * Initial Release.
 
- -- Package Maintainer <packages@stellar.org>  Fri, 01 Dec 2017 13:44:05 +0000
+ -- Ivan Voras (ONFO) <ivan.voras@toptal.com>  Fri, 01 Dec 2017 13:44:05 +0000
