--- a/stellar-core/debian/changelog
+++ b/stellar-core/debian/changelog
@@ -8,5 +8,5 @@ stellar-core-onfo (0.1-1) stable; urgency=medium
 
   * clean up dependencies
 
- -- Ivan Voras (ONFO) <ivan.voras@toptal.com>  Sat, 23 Nov 2018 23:03:50 +0000
+ -- ONFO Package Builder <onfo@onfo.com>  Sat, 23 Nov 2018 23:03:50 +0000
 
